# memory_arena

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DOXYGEN_STYLE_GUIDE.md  Doxyfile  LICENSE  README.md  test_all.sh
.github/workflows/: test.yml
benchmark/: benchmark_arena_suite.c
cmake/: Findmemory_arena.cmake  SanitizerConfig.cmake  memory_arena.pc.in  memory_arenaConfig.cmake.in
demo/: visualizer.c
docs/: _2home_2toonsa_2myProjects_2memoryArena_2include_2arena_8h-example.html  _2home_2toonsa_2myProjects_2memoryArena_2include_2arena_stack_8h-example.html  _2home_2toonsa_2myProjects_2memoryArena_2include_2internal_2arena_debug_8h-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2allocation_2arena_alloc_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2allocation_2arena_alloc_sub_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2allocation_2arena_calloc_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2allocation_2arena_realloc_last_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_cleanup_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_hooks_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_io_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_resize_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_scratch_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_stack_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_state_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_tlscratch_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2internal_2arena_debug_8c-example.html  annotated.html  arena_8h.html  arena_8h__dep__incl.md5  arena_8h__incl.md5  arena_8h_source.html  arena__alloc_8c.html  arena__alloc_8c__incl.md5  arena__alloc_8c_source.html  arena__alloc__sub_8c.html  arena__alloc__sub_8c__incl.md5  arena__calloc_8c.html  arena__calloc_8c__incl.md5  arena__calloc_8c_source.html  arena__cleanup_8c.html  arena__cleanup_8c__incl.md5  arena__cleanup_8c_source.html  arena__config_8h.html  arena__config_8h__dep__incl.md5  arena__config_8h_source.html  arena__config__internal_8h.html  arena__config__internal_8h_source.html  arena__create_8c.html  arena__create_8c__incl.md5  arena__create_8c_source.html  (+135 more)
docs/html/: README_8md.html  _2home_2toonsa_2myProjects_2memoryArena_2include_2arena_8h-example.html  _2home_2toonsa_2myProjects_2memoryArena_2include_2arena_io_8h-example.html  _2home_2toonsa_2myProjects_2memoryArena_2include_2arena_stack_8h-example.html  _2home_2toonsa_2myProjects_2memoryArena_2include_2internal_2arena_debug_8h-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2allocation_2arena_alloc_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2allocation_2arena_alloc_sub_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2allocation_2arena_calloc_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2allocation_2arena_realloc_last_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_cleanup_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_create_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_hooks_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_io_8c-example.html  _2home_2toonsa_2myProjects_2memoryArena_2srcs_2core_2arena_resize_8c-example.html  annotated.html  arena_8h.html  (+137 more)
include/: arena.h  arena_config.h  arena_group.h  arena_hooks.h  arena_io.h  arena_scratch.h  arena_stack.h  arena_stats.h  arena_tlscratch.h  arena_visualizer.h
tests/: test_arena_alloc.c  test_arena_alloc_sub.c  test_arena_allocation_hook.c  test_arena_calloc.c  test_arena_cleanup.c  test_arena_create_init.c  test_arena_debug.c  test_arena_init_with_buffer.c  test_arena_internal.c  test_arena_io.c  test_arena_realloc_last.c  test_arena_resize.c  test_arena_stack.c  test_arena_state.c  test_arena_stats.c  test_scratch_arena.c  test_threads_alloc.c  test_threads_alloc_sub.c  test_threads_calloc.c  test_threads_cleanup.c  test_threads_create.c  test_threads_hooks.c  test_threads_init_buffer.c  test_threads_internal.c  test_threads_io.c  test_threads_realloc_last.c  test_threads_resize.c  test_threads_scratch.c  test_threads_scratch_arena.c  test_threads_stack.c  test_threads_state.c  test_threads_stats.c
(+132 files in other folders)
